# ipfweight

./: LICENSE  README.md  pyproject.toml
src/: ipfweight.py
